# open-course

./: .gitignore  LICENSE  README.md  go.mod  gqlgen.yml  server.go
graph/: generated.go  resolver.go  schema.graphqls  schema.resolvers.go
scripts/: README.md  database.py  drop_tables.py  drop_types.py  get_programs.py  get_undergrad_courses.py  get_undergrad_meta.py  get_undergrad_programs.py  init_database.py  pyproject.toml  utils.py
